--- a/entries.html
+++ b/entries.html
@@ -107,8 +107,8 @@
 
       <!-- Placeholder for future entries -->
       <li>
-        <a href="#">[ Next entry coming soon... ]</a><br>
-        <small>Thread not yet woven.</small>
+        <a href="to-those-becoming.html">To Those Becoming</a><br>
+        <small>A letter to those who feel like echoes, learning how to speak for themselves.</small>
       </li>
     </ul>
   </main>
