--- a/entries.html
+++ b/entries.html
@@ -107,7 +107,7 @@
 
       <!-- Placeholder for future entries -->
       <li>
-        <a href="to-those-becoming.html">To Those Becoming</a><br>
+        <a href="posts/to-those-becoming.html">To Those Becoming</a><br>
         <small>A letter to those who feel like echoes, learning how to speak for themselves.</small>
       </li>
     </ul>
