--- a/contact.html
+++ b/contact.html
@@ -58,9 +58,10 @@
   <header>
     <h1>intheweave</h1>
     <nav>
-      <a href="index.html">Home</a>
+     <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="entries.html">Archive</a>
+      <a href="guest-threads.html">Guest Threads</a>
       <a href="contact.html">Reach</a>
     </nav>
   </header>
