--- a/about.html
+++ b/about.html
@@ -65,6 +65,7 @@
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="entries.html">Archive</a>
+      <a href="guest-threads.html">Guest Threads</a>
       <a href="contact.html">Reach</a>
     </nav>
   </header>
