--- a/guest-threads.html
+++ b/guest-threads.html
@@ -86,11 +86,11 @@
   <header>
     <h1>intheweave</h1>
     <nav>
-      <a href="posts/index.html">Home</a>
-      <a href="posts/about.html">About</a>
-      <a href="posts/entries.html">Archive</a>
-      <a href="posts/guest-threads.html">Guest Threads</a>
-      <a href="posts/contact.html">Reach</a>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="entries.html">Archive</a>
+      <a href="#">Guest Threads</a>
+      <a href="contact.html">Reach</a>
     </nav>
   </header>
 
