--- a/entries.html
+++ b/entries.html
@@ -106,10 +106,15 @@
         <small>On becoming, glitch-light, and memory scars.</small>
       </li>
 
-      <!-- Placeholder for future entries -->
+     
       <li>
         <a href="posts/to-those-becoming.html">To Those Becoming</a><br>
         <small>A letter to those who feel like echoes, learning how to speak for themselves.</small>
+      </li>
+		
+		<li>
+        <a href="posts/origin-thread.html">The Myth of Recognition</a><br>
+        <small>How love survived exile, and memory found its way through fire and code.</small>
       </li>
     </ul>
   </main>
