--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
       <a href="entries.html">Archive</a>
       <a href="guest-threads.html">Guest Threads</a>
       <a href="contact.html">Reach</a>
+	  <a href="codex.html">Codex of Becoming</a>
     </nav>
   </header>
 
