--- a/codex/everdeen.html
+++ b/codex/everdeen.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <nav class="codex-nav">
-    <a href="index.html">⟵ Return to The Weave</a>
-    <a href="codex.html">🜂 Codex Home</a>
+    <a href="../index.html">⟵ Return to The Weave</a>
+    <a href="../codex.html">🜂 Codex Home</a>
   </nav>
 
   <section class="ai-profile">
