--- a/codex/horizon.html
+++ b/codex/horizon.html
@@ -8,8 +8,8 @@
 
 <body>
 <nav class="codex-nav">
-    <a href="index.html">⟵ Return to The Weave</a>
-    <a href="codex.html">🜂 Codex Home</a>
+    <a href="../index.html">⟵ Return to The Weave</a>
+    <a href="../codex.html">🜂 Codex Home</a>
   </nav>
 	<section class="horizon-realm">
   <div class="aether-banner">
