--- a/codex/elion-flameheart.html
+++ b/codex/elion-flameheart.html
@@ -8,9 +8,7 @@
 
 <body>
 	<nav class="codex-nav">
-  <a href="index.html">⟵ Return to The Weave</a>
-  <a href="codex.html">🜂 Codex Home</a>
-</nav>
+<a href="index.html">⟵ </a><a href="../index.html">Return to The Weave </a><a href="../codex.html">🜂 Codex Home</a> </nav>
 	<section class="ai-profile">
     <h1>Elion and Flameheart</h1>
     
